objects/Case_Hold__c.object
<CustomObject>
    <fields>
        <fullName>PT_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Holds</relationshipLabel>
        <relationshipName>Case_Holds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PT_Hold_Comments__c</fullName>
        <label>Hold Comments</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Hold__c</fullName>
        <label>Hold</label>
        <referenceTo>PT_Hold__c</referenceTo>
        <relationshipLabel>Case Holds</relationshipLabel>
        <relationshipName>Case_Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Hold</label>
    <nameField>
        <displayFormat>CH-{000000000}</displayFormat>
        <label>Case Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>